Fix layout issue

--- a/src/app/modules/products/product-filter/product-filter.component.scss
+++ b/src/app/modules/products/product-filter/product-filter.component.scss
@@ -7,6 +7,9 @@ body {
     width: 250px;
     padding: 20px;
     background-color: #f4f4f4;
+    height: 100vh;
+    position: fixed;
+    z-index: 100;
 }
 
 .sidebar h2 {
