--- a/src/app/modules/products/product-list/product-list.component.scss
+++ b/src/app/modules/products/product-list/product-list.component.scss
@@ -7,6 +7,11 @@
     &__product-container {
         display: flex;
         flex-wrap: wrap;
+        overflow-y: hidden;
+        width: 74%;
+        margin: auto;
+        left: 24rem;
+        position: absolute;
         
     }
 }
